# LabelizerBackend

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
database/: schema.sql
server/: .env  __init__.py  app.py  configs.py  managers.py  marshalling.py  models.py  views.py
server/auth/: managers.py  marshalling.py  models.py  validator.py  views.py
server/conf/: configs.py  database.py
server/labelizer/: managers.py  marshalling.py  models.py  views.py
