[tool.poetry]
name = "labelizer-backend"
version = "0.1.0"
description = ""
authors = ["JangasCodingplace <janisgoesser92@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
python-dotenv = "^0.18.0"
psycopg2-binary = "^2.9.1"
Flask-Cors = "^3.0.10"
flask-restx = "^0.4.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
